# music-fatigue

./: .gitignore  CHANGELOG.md  LICENSE  README.md
backend/: Dockerfile.api  Dockerfile.db  app.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a5b17d8d705d_init.py
backend/src/: lib.py
backend/tests/: test_auth.py
docs/: MVP.md  db.md
frontend/: app.json  package-lock.json  package.json  pyproject.toml  tsconfig.json
