[project]
name = "backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "carterwward", email = "Carter.Ward@uvm.edu"},
]
dependencies = ["uvicorn>=0.34.0", "spotipy>=2.25.1", "python-dotenv>=1.0.1", "litestar>=2.15.1", "cryptography>=44.0.1"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
app = "uvicorn app:app --reload"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.3.4",
]
